--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "axios": "^0.27.2",
     "ag-grid-community": "^28.2.1",
     "ag-grid-react": "^28.2.1",
+    "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5",
     "react-fade-in": "^2.0.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "6",
