--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "ag-grid-react": "^28.2.1",
     "axios": "^0.27.2",
     "react": "^18.2.0",
+    "react-country-flag": "^3.0.2",
     "react-dom": "^18.2.0",
-    "react-draggable": "^4.4.5",
     "react-fade-in": "^2.0.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "6",
